colossus: extends '/status' endpoint with additional info, e.g. sync, cleanup & buckets configurations
