# storage-node/src/api-spec/openapi.yaml
@@ -295,6 +295,10 @@ components:
       required:
         - version
         - queryNodeStatus
+        - uploadBuckets
+        - downloadBuckets
+        - sync
+        - cleanup
       properties:
         version:
           type: string
@@ -313,6 +317,39 @@ components:
             blocksProcessed:
               type: integer
               minimum: 0
+        uploadBuckets:
+          type: array
+          items:
+            type: string
+        downloadBuckets:
+          type: array
+          items:
+            type: string
+        sync:
+          type: object
+          required:
+            - 'enabled'
+            - 'interval'
+          properties:
+            enabled:
+              type: boolean
+            interval:
+              type: integer
+        cleanup:
+          type: object
+          required:
+            - 'enabled'
+            - 'interval'
+          properties:
+            enabled:
+              type: boolean
+            interval:
+              type: integer
+            maxQnLaggingThresholdInBlocks:
+              type: integer
+            minReplicationThresholdForPruning:
+              type: integer
+
     DataObjectResponse:
       type: array
       items:
