# storage-node/src/services/webApi/controllers/stateApi.ts
@@ -1,12 +1,13 @@
-import { getDataObjectIDs } from '../../../services/caching/localDataObjects'
 import * as express from 'express'
-import _ from 'lodash'
-import { getDataObjectIDsByBagId } from '../../sync/storageObligations'
-import { sendResponseWithError, AppConfig } from './common'
 import fastFolderSize from 'fast-folder-size'
-import { promisify } from 'util'
 import fs from 'fs'
+import _ from 'lodash'
 import NodeCache from 'node-cache'
+import { promisify } from 'util'
+import { getDataObjectIDs } from '../../../services/caching/localDataObjects'
+import logger from '../../logger'
+import { QueryNodeApi } from '../../queryNode/api'
+import { getDataObjectIDsByBagId } from '../../sync/storageObligations'
 import {
   DataObjectResponse,
   DataStatsResponse,
@@ -14,8 +15,7 @@ import {
   StatusResponse,
   VersionResponse,
 } from '../types'
-import { QueryNodeApi } from '../../queryNode/api'
-import logger from '../../logger'
+import { AppConfig, sendResponseWithError } from './common'
 const fsPromises = fs.promises
 
 // Expiration period in seconds for the local cache.
@@ -135,11 +135,15 @@ export async function getVersion(
  * A public endpoint: returns the server status.
  */
 export async function getStatus(req: express.Request, res: express.Response<StatusResponse, AppConfig>): Promise<void> {
-  const { qnApi, process } = res.locals
+  const { qnApi, process, uploadBuckets, downloadBuckets, sync, cleanup } = res.locals
 
   // Copy from an object, because the actual object could contain more data.
   res.status(200).json({
     version: process.version,
+    uploadBuckets,
+    downloadBuckets,
+    sync,
+    cleanup,
     queryNodeStatus: await getQueryNodeStatus(qnApi),
   })
 }
